random color and position

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>p5.js tutorial</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="sketch.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
   </head>
   <body>
 
